@@ -79,66 +79,65 @@ public class PropertiesUtil {
 	 * @since 2022-05-09 15:13:04
 	 */
 	public enum ParseFuncEnum {
-
-		INT_PARSE(Arrays.asList(int.class, Integer.class)) {
+		/**
+		 * INT_PARSE
+		 */
+		INT_PARSE(List.of(int.class, Integer.class)) {
 			@Override
 			public Function<String, Integer> getFunc() {
 				return Integer::valueOf;
 			}
 		},
-		LONG_PARSE(Arrays.asList(long.class, Long.class)) {
+		LONG_PARSE(List.of(long.class, Long.class)) {
 			@Override
 			public Function<String, Long> getFunc() {
 				return Long::valueOf;
 			}
 		},
-		BOOLEAN_PARSE(Arrays.asList(boolean.class, Boolean.class)) {
+		BOOLEAN_PARSE(List.of(boolean.class, Boolean.class)) {
 			@Override
 			public Function<String, Boolean> getFunc() {
 				return Boolean::valueOf;
 			}
 		},
-		FLOAT_PARSE(Arrays.asList(float.class, Float.class)) {
+		FLOAT_PARSE(List.of(float.class, Float.class)) {
 			@Override
 			public Function<String, Float> getFunc() {
 				return Float::valueOf;
 			}
 		},
-		DOUBLE_PARSSE(Arrays.asList(double.class, Double.class)) {
+		DOUBLE_PARSE(List.of(double.class, Double.class)) {
 			@Override
 			public Function<String, Double> getFunc() {
 				return Double::valueOf;
 			}
 		},
-		SHORT_PARSE(Arrays.asList(short.class, Short.class)) {
+		SHORT_PARSE(List.of(short.class, Short.class)) {
 			@Override
 			public Function<String, Short> getFunc() {
 				return Short::valueOf;
 			}
 		},
-		BYTE_PARSE(Arrays.asList(byte.class, Byte.class)) {
+		BYTE_PARSE(List.of(byte.class, Byte.class)) {
 			@Override
 			public Function<String, Byte> getFunc() {
 				return Byte::valueOf;
 			}
 		},
-		CHAR_PARSE(Arrays.asList(char.class, Character.class)) {
+		CHAR_PARSE(List.of(char.class, Character.class)) {
 			@Override
 			public Function<String, Character> getFunc() {
 				return s -> s.charAt(0);
 			}
 		},
-		STRING_PARSE(Arrays.asList(String.class)) {
+		STRING_PARSE(List.of(String.class)) {
 			@Override
-			public Function<String, String> getFunc() {
+			public Function<String, String> getFunc(){
 				return s -> s;
 			}
-		},
-		;
+		};
 
-
-		private List<Class> clzList;
-
+		private final List<Class<?>> clzList;
 
 		/**
 		 * 获取函数
@@ -148,25 +147,17 @@ public class PropertiesUtil {
 		 */
 		public abstract <T> Function<String, T> getFunc();
 
-
-		private static Map<Class, ParseFuncEnum> map = new ConcurrentHashMap<>(20);
+		private static Map<Class<?>, ParseFuncEnum> map = new ConcurrentHashMap<>(20);
 
 		static {
 			for (ParseFuncEnum enu : ParseFuncEnum.values()) {
-				for (Class clz : enu.clzList) {
+				for (Class<?> clz : enu.clzList) {
 					map.put(clz, enu);
 				}
 			}
 		}
-
-		/**
-		 * 解析函数枚举
-		 *
-		 * @param clz clz
-		 * @return
-		 * @since 2022-05-09 15:13:04
-		 */
-		ParseFuncEnum(List<Class> clz) {
+		
+		ParseFuncEnum(List<Class<?>> clz) {
 			this.clzList = clz;
 		}
 
